Reconfigured the location of Vlcj to /Applications/Vlc/Contents/MacOS/lib

--- a/Neptune View/src/NeptuneView/.classpath
+++ b/Neptune View/src/NeptuneView/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Downloads/jmf-2_1_1e-alljava.zip"/>
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Downloads/fmj-20070928-0938.zip"/>
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Downloads/jna.jar"/>
-	<classpathentry kind="lib" path="/Users/ericzhu/Desktop/TXE java 7/TXE/src/swing-layout-1.0.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Downloads/vlcj-2.4.1-dist.zip"/>
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Downloads/vlcj-2.4.1/jna-3.5.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Downloads/vlcj-2.4.1/platform-3.5.2.jar"/>
@@ -23,5 +22,6 @@
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Desktop/rt.jar"/>
 	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Desktop/jfxrt.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="/Users/ericzhu/Desktop/TXE java 7/TXE MASTER Code/TXE/src/swing-layout-1.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
